# apt-cacher-rs

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  TODO  apt-cacher-rs.conf  apt-cacher-rs.init  apt-cacher-rs.service  clippy.toml  db.sqlite  deny.toml  dev.conf
.cargo/: audit.toml
.github/workflows/: audit.yml  audit_schedule.yml  deny.yml  release_deb.yml  rust.yml  spelling.yml
.sqlx/: query-065ed29beeda22c4f962b818fbf4fb6c8ee29e408404f0c78968d110298c7c37.json  query-08ca24981a1baa901977a8d752396b570a5bb197e81496058e0d789ec0945f42.json  query-0b06764603db373e050425472e57d4ec34b1044f0d81f1d26874ced304dc8f09.json  query-0e52b94ce6c36dd32efaa5d4ce1af589d8333f75806f23b0bf889e5e551c2ba4.json  query-2325dd9579a31d0e4775d39eec4aea4f475d90c28a63d3ee011e99d42a19bdc7.json  query-26c5d2fe150dbd464b508a5f91b11e7bd0f47c02787895e99b00c764f371e6f5.json  query-279faddf2024c44326a57f90948c58346d1196157257a7c8019ca750e283a6b8.json  query-28059a041ec73c34bcfa0aa99bc12b0bd2981461d13fc31b35c09f4310e82e98.json  query-2a1f8fac8211d6db96ec0d69a3dabb4f2976fd7467d6f7f040999da5563e9e69.json  query-30f64c996fd84ceea54b6e082b3f8177c4eba2add02697d67bafaf705b423c5d.json  query-3214866e32b3643d4580948d9ce9656c08ba87460e1b61566dc470d89903c430.json  query-3574b5fce729f584c6f50c0a2e898df6fa71a36db567e0f57ae8822e212392e7.json  query-368c504fde937bcebdb6c6241c15ac688d8026f8a3d848879cb85a10b64d3cf7.json  query-3f6c8f1f73466b90118e245fb1033713edd4b5019578a915d8895be6bbc9a406.json  query-45e76e2c51d2a5caf8bc4db92660f30db4a756cc1d5862ba96ef3ffd5bb5c05b.json  query-50fb1fe1e62249929b0afe02cd3b249dbcb63808e54e5d116f99ad726a936b93.json  query-5b6789eff564942689352f6bd1a2e5cf33a6b61099928c3bdabb73494939893d.json  query-5e5bafdcfe810731766a1650b768ea15d1e97e25cd9d6b082a233900bc7e0ebb.json  query-68ec39b312a69170fd3af8b554a9b73f2c2e075dcfd2ec6fdfb2b458baf2ad6c.json  query-6b5d0deee1c67baad263873ce6cdba5e30245635256b28e6cc9ad4efc2b8572b.json  query-70ae77ca749abb29f8b95430d86ced04a470224d9d1e12204ae85b17dfba561e.json  query-75fe5d47a56d03b256978fe3a5e163fe4d8e2c4ae5232ab6301f48e3412aec59.json  query-76ebc408279a3a585e9fced16abd69cc503167c6b171f25a29fdf4ff9599f664.json  query-a122b84401caa1dd72f2ed67b6043a311b18feacabbce5d9adfac0fed34dd9f7.json  query-b7a7754be78a39f04f1b8d285b26795adfc284e6c07a836aba38807e9d62a69a.json  query-c0b087db0f5d6eae8c28ab13783a24169c895b73f182babb93154b35a382a628.json  query-c7d11169229f2e5c5bad7f23f69fe7fcd960ecd0306821f8d44e755a1266b51c.json  query-c8fa9385e75ec358acb210f219015e2d9460c50d3347ba2f57e9e009366b457a.json  query-d023fa35b5d0a09fd6fc5ac50af160fe52b21d9f456852e2d942b4b8e05c71ac.json  query-dabed1b47844be500d88eb2b35466f61da0aa5d1ee6c0f13cfdd85bf7e5631a0.json  query-e251dfce4664ee432bd30286ee108ad5fa6d806c5ac3878ddb93206d398b8ea3.json  query-e85f119eb29e6a972fb44cf4ce46ac973b61cfe0f15ee8d0553d92958f85b078.json  query-f370701796f03be4acd483da2bf8afc710d323437abc54acd345db5cb933db85.json  query-f70c461572474ec7e074e65da787b590f7d50604d9231ef5c35f4c5013c4c19f.json  query-ff9456a814fd5318e404d7f24c0845117ccb9886491b933b27d8e4e1ad159d18.json
debian/: apt-cacher-rs.8  apt-cacher-rs.conf  apt-cacher-rs.service  changelog  lintian-overrides  postinst  postrm
migrations/: 20251204161857_mirror_port.down.sql  20251204161857_mirror_port.up.sql  20260512155314_mirror_kind.down.sql  20260512155314_mirror_kind.up.sql
src/: active_downloads.rs  cache_conditional.rs  cache_layout.rs  cache_metadata.rs  cache_quota.rs  channel_body.rs  config.rs  database.rs  database_task.rs  deb_mirror.rs  error.rs  flat_blocklist.rs  guards.rs  http_etag.rs  http_helpers.rs  http_last_modified.rs  http_range.rs  humanfmt.rs  index_parser.rs  ktls.rs  ktls_handshake.rs  limits.rs  log_once.rs  logstore.rs  main.rs  metrics.rs  rate_checked_body.rs  ringbuffer.rs  secure_vec.rs  sendfile_conn.rs  small_vec_deque.rs  splice_conn.rs  task_cache_scan.rs  task_cleanup.rs  task_setup.rs  uncacheables.rs  utils.rs  web_interface.rs  xattr_helpers.rs
