[package]
name = "apt-cacher-rs"
version = "0.1.0"
authors = ["Christian Göttsche <cgzones@googlemail.com>"]
license = "MIT"
description = "A caching proxy for Debian style package repositories"
readme = "README.md"
homepage = "https://github.com/cgzones/apt-cacher-rs"
repository = "https://github.com/cgzones/apt-cacher-rs"
keywords = ["Debian", "proxy", "cache", "deb", "apt"]
categories = ["caching"]
edition = "2024"
exclude = [
   ".env",
   ".github/",
   ".gitignore",
   "dev.conf",
   "TODO",
]

[dependencies]
anyhow = "1.0.81"
async-compression = { version = "0.4.6", features = [ "tokio", "xz", "gzip" ] }
build_html = "2.4.0"
bytes = "1.6.0"
clap = { version = "4.5.1", features = [ "derive" ] }
futures-util = "0.3.30"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = [ "full" ] }
hyper-timeout = "0.5.1"
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.3", features = [ "full" ] }
ipnet = { version = "2.9.0", features = [ "serde" ] }
log = "0.4.20"
memfd = "0.6.4"
nix = { version = "0.29.0", features = [ "user" ] }
pin-project = "1.1.4"
rand = "0.9"
scopeguard = "1.2.0"
serde = "1.0.197"
simplelog = "0.12.1"
sqlx = { version = "0.8", default-features = false, features = [ "macros", "runtime-tokio", "sqlite" ] }
time = { version = "0.3.34", features = [ "parsing" ] }
tokio = { version = "1.36.0", features = [ "full" ] }
tokio-util = "0.7.10"
toml = "0.8.12"
urlencoding = "2.1.3"

[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[lints.rust]
elided_lifetimes_in_paths = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"
unsafe_code = "forbid"
unused_must_use = "warn"

[lints.clippy]
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
enum_glob_use = "warn"
if_not_else = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
invalid_regex = "deny"
items_after_statements = "warn"
must_use_candidate = "warn"
mut_mut = "warn"
non_ascii_literal = "warn"
panic = "deny"
print_stdout = "warn"
similar_names = "warn"
unicode_not_nfc = "deny"
unreadable_literal = "deny"
unwrap_used = "warn"
used_underscore_binding = "warn"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = 'abort'

# Speed up compile time query checking
[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.profiling]
inherits = "release"
opt-level = 3
debug = 1
strip = false
debug-assertions = false
overflow-checks = false
lto = true
