[package]
name = "apt-cacher-rs"
version = "0.3.0"
authors = ["Christian Göttsche <cgzones@googlemail.com>"]
license = "MIT"
description = "A caching proxy for Debian style package repositories"
readme = "README.md"
repository = "https://github.com/cgzones/apt-cacher-rs"
keywords = ["Debian", "proxy", "cache", "deb", "apt"]
categories = ["caching"]
edition = "2024"
exclude = [".env", ".github/", ".gitignore", "dev.conf", "TODO"]


[features]
default = ["mmap", "tls_rustls"]
mmap = ["dep:memmap2"]
tls_hyper = ["dep:hyper-tls"]
tls_rustls = ["dep:hyper-rustls", "dep:rustls"]
tokio_console = ["dep:console-subscriber"]


[dependencies]
anyhow = "1.0.81"
async-compression = { version = "0.4.6", features = ["tokio", "xz", "gzip"] }
build_html = "2.4.0"
bytes = "1.6.0"
clap = { version = "4.5.1", features = ["derive"] }
coarsetime = "0.1.36"
console-subscriber = { version = "0.4", optional = true }
futures-util = "0.3.30"
http-body-util = "0.1.0"
hyper = { version = "1.2.0", features = ["full"] }
hyper-rustls = { version = "0.27", optional = true }
hyper-timeout = "0.5.1"
hyper-tls = { version = "0.6.0", optional = true }
hyper-util = { version = "0.1.3", features = ["full"] }
ipnet = { version = "2.9.0", features = ["serde"] }
log = "0.4.20"
memfd = "0.6.4"
memmap2 = { version = "0.9", optional = true }
nix = { version = "0.30", features = ["user"] }
parking_lot = "0.12.5"
pin-project = "1.1.4"
rand = "0.9"
rustls = { version = "0.23", optional = true }
scopeguard = "1.2.0"
serde = "1.0.197"
simplelog = "0.12.1"
sqlx = { version = "0.8", default-features = false, features = [
    "macros",
    "runtime-tokio",
    "sqlite",
] }
time = { version = "0.3.34", features = ["parsing"] }
tokio = { version = "1.36.0", features = ["macros", "parking_lot", "rt-multi-thread", "signal"] }
tokio-util = "0.7.10"
toml = "0.9.5"
urlencoding = "2.1.3"


[lints.rust]
elided_lifetimes_in_paths = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "forbid"
unreachable_pub = "warn"
#unsafe_code = "forbid"
unused_must_use = "warn"

[lints.clippy]
as_underscore = "warn"
assigning_clones = "warn"
branches_sharing_code = "warn"
cargo_common_metadata = "warn"
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"
cast_precision_loss = "warn"
cast_sign_loss = "warn"
clone_on_ref_ptr = "warn"
collection_is_never_read = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
disallowed_types = "warn"
enum_glob_use = "warn"
exit = "warn"
fn_to_numeric_cast_any = "warn"
future_not_send = "warn"
if_not_else = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
infinite_loop = "warn"
invalid_regex = "deny"
items_after_statements = "warn"
large_stack_frames = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
literal_string_with_formatting_args = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
map_err_ignore = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
mixed_read_write_in_expression = "warn"
multiple_unsafe_ops_per_block = "warn"
must_use_candidate = "warn"
mut_mut = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
non_ascii_literal = "warn"
non_send_fields_in_send_ty = "warn"
non_zero_suggestions = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
panic = "deny"
path_buf_push_overwrite = "warn"
pathbuf_init_then_push = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
set_contains_or_insert = "warn"
significant_drop_in_scrutinee = "warn"
significant_drop_tightening = "warn"
similar_names = "warn"
string_lit_as_bytes = "warn"
string_lit_chars_any = "warn"
string_slice = "warn"
tests_outside_test_module = "warn"
trait_duplication_in_bounds = "warn"
trivial_regex = "warn"
try_err = "warn"
type_repetition_in_bounds = "warn"
undocumented_unsafe_blocks = "warn"
unicode_not_nfc = "deny"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unreadable_literal = "deny"
unused_peekable = "warn"
unused_result_ok = "warn"
unused_rounding = "warn"
unwrap_used = "warn"
use_debug = "warn"
use_self = "warn"
used_underscore_binding = "warn"
useless_let_if_seq = "warn"
while_float = "warn"
wildcard_enum_match_arm = "warn"


[profile.release]
lto = true
strip = true
codegen-units = 1
panic = 'abort'

# Speed up compile time query checking
[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.profiling]
inherits = "release"
opt-level = 3
debug = 1
strip = false
debug-assertions = false
overflow-checks = false
lto = true

[package.metadata.deb]
assets = [
    [
        "debian/apt-cacher-rs.conf",
        "/etc/apt-cacher-rs/apt-cacher-rs.conf",
        "644",
    ],
    [
        "target/release/apt-cacher-rs",
        "/usr/sbin/apt-cacher-rs",
        "755",
    ],
]
conflicts = "apt-cacher-ng"
extended-description = "A caching proxy for Debian style package repositories"
maintainer-scripts = "debian/"
systemd-units = { enable = true, start = true }
